components/radix-platform/radix-apps/ingress.public-site.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/force-ssl-redirect: "true"
  labels:
    radix-app: radix-public-site
    radix-component: public-site
  name: public-site.custom-domain
  namespace: radix-public-site-prod
spec:
  ingressClassName: nginx
  rules:
    - host: "${dnsZone}"
      http:
        paths:
          - backend:
              service:
                name: public-site
                port:
                  number: 8080
            path: /
            pathType: Prefix
    - host: "www.${dnsZone}"
      http:
        paths:
          - backend:
              service:
                name: public-site
                port:
                  number: 8080
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - "${dnsZone}"
        - "www.${dnsZone}"
      secretName: radix-wildcard-tls-cert
